[gd_scene load_steps=6 format=3 uid="uid://nnvktsnarp15"]

[ext_resource type="Texture2D" uid="uid://d1xdana6kqubf" path="res://images/menuBG.png" id="1_a2v1q"]
[ext_resource type="FontFile" uid="uid://brscic2q5cbna" path="res://assets/FOT-NewRodin Pro DB.otf" id="1_cjm32"]
[ext_resource type="Script" uid="uid://cumkh8sdw37s1" path="res://scripts/gamechoose.gd" id="1_yavud"]
[ext_resource type="Script" uid="uid://qciuem4i4r00" path="res://scripts/menu_fg.gd" id="2_ir7r2"]
[ext_resource type="Script" uid="uid://dkcqfhew3g57y" path="res://scripts/btns/btn.gd" id="5_fjb6h"]

[node name="Gamechoose" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yavud")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MenuBg" type="Sprite2D" parent="."]
modulate = Color(0.0941176, 0.0980392, 1, 0.117647)
texture_filter = 1
position = Vector2(1.00006, 1.00006)
scale = Vector2(5.745, 5.745)
texture = ExtResource("1_a2v1q")
offset = Vector2(100, 70)
script = ExtResource("2_ir7r2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="chooseGamemode" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_cjm32")
text = "choose gamemode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ng" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_cjm32")
text = "*ng"
flat = true
alignment = 0
script = ExtResource("5_fjb6h")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="tris" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_cjm32")
text = "*tris"
flat = true
alignment = 0
script = ExtResource("5_fjb6h")

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="tale" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_cjm32")
text = "*tale"
flat = true
alignment = 0
script = ExtResource("5_fjb6h")

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="asterisk" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_cjm32")
theme_override_font_sizes/font_size = 75
text = "*"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="modetitle" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_direction = 4
layout_mode = 2
theme_override_fonts/font = ExtResource("1_cjm32")
theme_override_font_sizes/font_size = 48
text = "TITLE"

[node name="modedesc" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_direction = 4
layout_mode = 2
theme_override_fonts/font = ExtResource("1_cjm32")
theme_override_font_sizes/font_size = 16
text = "DESCRIPTION"

[node name="ColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 52.0
grow_vertical = 0
theme_override_constants/margin_left = 30
theme_override_constants/margin_bottom = 30

[node name="back" type="Button" parent="MarginContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_cjm32")
theme_override_font_sizes/font_size = 16
text = "back"
flat = true

[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/ng" to="." method="_on_ng_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2/tris" to="." method="_on_tris_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer3/tale" to="." method="_on_tale_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer3/tale" to="." method="_on_tale_mouse_exited"]
[connection signal="pressed" from="MarginContainer2/back" to="." method="_on_back_pressed"]
